--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Auto Filter Bot V3",
+    "name": "SAZUKI-SAMSUNG",
     "description": "A greater auto filter bot with features like IMDb support,inline mode,broadcast feature etc..",
-    "logo":"https://telegra.ph/file/ad9cb7fc42ec0e5e6d006.jpg",
+    "logo":"https://telegra.ph/file/316b36c86428f76518e13.jpg",
     "keywords": [
       "telegram",
       "auto-filter",
@@ -15,11 +15,15 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/DalinMathew/AutoFilterBotV3",
+    "website": "https://github.com/sherlockv2/AutoFilterBotV3",
     "repository": "https://github.com/sherlockv2/AutoFilterBotV3",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
+            "value": ""
+        }
+        "OWNER_ID": {
+            "description": "Your Own This Bot Controll Broadcast Id.",
             "value": ""
         },
         "API_ID": {
@@ -37,11 +41,6 @@
         "ADMINS": {
             "description": "Username or ID of Admin. Separate multiple Admins by space.",
             "value": ""
-        },
-        "AUTH_USERS": {
-            "description": "Username or ID of users to give access of inline search. Separate multiple users by space.\nLeave it empty if you don't want to restrict bot usage.",
-            "value": "",
-            "required": false
         },
         "FORCES_SUB": {
             "description": "ID of channel.Make sure bot is admin in this channel. Without subscribing this channel users cannot use bot.",
@@ -75,11 +74,8 @@
         },
         "DATABASE_2": {
             "description": "mongoDB URI. Get this value from https://www.mongodb.com ",
-            "value": ""
-        },
-        "BOT_NAME": {
-            "description": "Name of the database in mongoDB ",
-            "value": "LuciferMoringstar_Robot"
+            "value": "",
+            "required":
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
