--- a/app.json
+++ b/app.json
@@ -106,6 +106,11 @@
             "description": "ID of a Channel (user Notification)",
             "value": "",
             "required": true
+        },
+        "TG_USER_SESSION": {
+            "description": "A pyrogram user session string. Generate from https://replit.com/@ALBINPRAVEEN1/getStringName",
+            "value": "",
+            "required": true
         }
     },
     "addons": [],
