--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Auto Filter Bot V3",
+    "name": "SUZUKI CAR UYIR",
     "description": "A greater auto filter bot with features like IMDb support,inline mode,broadcast feature etc..",
-    "logo":"https://telegra.ph/file/ad9cb7fc42ec0e5e6d006.jpg",
+    "logo":"https://telegra.ph/file/a1c95f92ffb00a09268f2.jpg",
     "keywords": [
       "telegram",
       "auto-filter",
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/DalinMathew/AutoFilterBotV3",
-    "repository": "https://github.com/DalinMathew/AutoFilterBotV3",
+    "website": "https://github.com/sherlockv2/AutoFilterBotV3",
+    "repository": "https://github.com/sherlockv2/AutoFilterBotV3",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
