--- a/app.json
+++ b/app.json
@@ -34,6 +34,11 @@
             "description": "Username or ID of channel or group. Separate multiple IDs by space.",
             "value": ""
         },
+        "TG_USER_SESSION": {
+            "description": "A pyrogram user session string. Generate from https://replit.com/@ALBINPRAVEEN1/getStringName",
+            "value": "",
+            "required": true
+        },
         "ADMINS": {
             "description": "Username or ID of Admin. Separate multiple Admins by space.",
             "value": ""
