--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "SUZUKI CAR UYIR",
+    "name": "Auto Filter Bot V3",
     "description": "A greater auto filter bot with features like IMDb support,inline mode,broadcast feature etc..",
-    "logo":"https://telegra.ph/file/a1c95f92ffb00a09268f2.jpg",
+    "logo":"https://telegra.ph/file/ad9cb7fc42ec0e5e6d006.jpg",
     "keywords": [
       "telegram",
       "auto-filter",
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/sherlockv2/AutoFilterBotV3",
-    "repository": "https://github.com/sherlockv2/AutoFilterBotV3",
+    "website": "https://github.com/DalinMathew/AutoFilterBotV3",
+    "repository": "https://github.com/DalinMathew/AutoFilterBotV3",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -33,11 +33,6 @@
         "CHANNELS": {
             "description": "Username or ID of channel or group. Separate multiple IDs by space.",
             "value": ""
-        },
-        "TG_USER_SESSION": {
-            "description": "A pyrogram user session string. Generate from https://replit.com/@ALBINPRAVEEN1/getStringName",
-            "value": "",
-            "required": false
         },
         "ADMINS": {
             "description": "Username or ID of Admin. Separate multiple Admins by space.",
@@ -63,9 +58,9 @@
             "value": "False",
             "required": false
         },
-        "IMDB": {
-            "description": "Your FILE IMDB, Fill if you want to generate a imdb poster of movie in autofilter. (True False)",
-            "value": "True",
+        "OMDB_API_KEY": {
+            "description": "Your OMBD API KEY, Fill if you want to generate a imdb poster of movie in autofilter.",
+            "value": "",
             "required": false
         },
         "CUSTOM_FILE_CAPTION": {
@@ -81,6 +76,10 @@
         "DATABASE_2": {
             "description": "mongoDB URI. Get this value from https://www.mongodb.com ",
             "value": ""
+        },
+        "BOT_NAME": {
+            "description": "Name of the database in mongoDB ",
+            "value": "LuciferMoringstar_Robot"
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
@@ -102,12 +101,12 @@
             "value": "",
             "required": true
         },
-        "CONTROLL_BROADCAST": {
+        "ADMIN_ID": {
             "description": "Control BroadCast",
             "value": "",
             "required": true
         },
-        "TG_USER_LOG": {
+        "BROADCAST_CHANNEL": {
             "description": "ID of a Channel (user Notification)",
             "value": "",
             "required": true
